--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   lazywarden:
     container_name: lazywarden
     hostname: lazywarden
-    image: querylab/lazywarden:latest
+    image: ch3ngyz/lazywarden:latest
     env_file:
       - .env
     environment:
