--- a/.env
+++ b/.env
@@ -70,14 +70,14 @@ B2_APP_KEY_ID=
 B2_APP_KEY=
 
 # Google Drive Settings
-GOOGLE_SERVICE_ACCOUNT_FILE=/root/lazywarden/config/bitwarden-drive-backup-google.json
+GOOGLE_OAUTH_FILE=/root/lazywarden/config/google-oauth.json
 GOOGLE_FOLDER_ID=
 
 # Backup Settings
 BACKUP_DIR=/root/lazywarden/backup-drive/
-CRON_SCHEDULE="0 0 23 * *"
-TIMEZONE=America/New_York
-TIMESTAMP=2024_10_31_13_03_29
+CRON_SCHEDULE="0 3 */7 * *"
+TIMEZONE=Asia/Shanghai
+TIMESTAMP=2025_09_08_09_13_08
 
   
 # API URLs for Bitwarden
